[project]
name = "flash-attn"
version = "0.1.0"
description = "Flash Attention in Cuda"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "matplotlib>=3.10.0",
    "modal>=0.73.52",
    "ninja>=1.11.1.3",
    "python-fasthtml>=0.12.1",
    "simpleicons>=7.21.0",
    "tiktoken>=0.9.0",
    "torch>=2.5.1",
]
